[package]
name = "cloudflareddns"
version = "0.3.0"
authors = ["Bret Curtis <psi29a@gmail.com>"]
description = "small, fast rust based cloudflare dns zone updator"
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/psi29a/cloudflareddns"
edition = "2021"

[profile.release]
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0"
config = { version = "0.14.0", default-features = false, features= ["ini"] }
env_logger = { version="0.11.6", default-features = false, features = ["humantime", "auto-color"] }
log = "0.4.27"
clap = { version = "4.5.38", default-features = false, features = ["std", "help", "derive"] }
minreq = { version = "2.12.0", default-features = false, features= ["json-using-serde", "https-rustls"] }

[dev-dependencies]
cross = "0.2.5"
mockito = "1.7.0"
